@@ -15,6 +15,8 @@ changes relative to sbcl-1.3.17:
   * enhancement: if the alien symbol "gc_coalesce_string_literals" is
     set to 1 prior to SAVE-LISP-AND-DIE, then similar string constants
     loaded from different fasl files may be collapsed to one object.
+    If the variable is set to 2, then additionally strings which are
+    STRING= in code resulting from COMPILE can be coalesced.
     For instance, two functions returning the literal string "HI"
     might return EQ strings after collapsing, which may be undesired
     in a particular use. The flag pertains to gencgc only.
